--- a/src/Makefile
+++ b/src/Makefile
@@ -1286,9 +1286,10 @@ CARBONGUI_TESTARG = VIMPROG=../$(APPDIR)/Contents/MacOS/$(VIMTARGET)
 
 # MACVIM GUI
 MACVIMGUI_SRC	= gui.c gui_beval.c MacVim/gui_macvim.m MacVim/MMBackend.m \
-		  MacVim/MacVim.m
+		  MacVim/MacVim.m MacVim/MMLog.m MacVim/MMTypes.m
 MACVIMGUI_OBJ	= objects/gui.o objects/gui_beval.o objects/pty.o \
-		  objects/gui_macvim.o objects/MMBackend.o objects/MacVim.o
+		  objects/gui_macvim.o objects/MMBackend.o objects/MacVim.o \
+          objects/MMLog.o objects/MMTypes.o
 MACVIMGUI_DEFS	= -DFEAT_GUI_MACVIM -Wall -Wno-unknown-pragmas -pipe
 MACVIMGUI_IPATH	=
 MACVIMGUI_LIBS_DIR =
@@ -2468,6 +2469,12 @@ objects:
 
 objects/MMBackend.o: MacVim/MMBackend.m
 	$(CCC) -fobjc-exceptions -o $@ MacVim/MMBackend.m
+
+objects/MMLog.o: MacVim/MMLog.m
+	$(CCC) -o $@ MacVim/MMLog.m
+
+objects/MMTypes.o: MacVim/MMTypes.m
+	$(CCC) -o $@ MacVim/MMTypes.m
 
 objects/MacVim.o: MacVim/MacVim.m
 	$(CCC) -o $@ MacVim/MacVim.m
