#5 remove macvim.h dependence from vim view

--- a/src/Makefile
+++ b/src/Makefile
@@ -1286,10 +1286,12 @@ CARBONGUI_TESTARG = VIMPROG=../$(APPDIR)/Contents/MacOS/$(VIMTARGET)
 
 # MACVIM GUI
 MACVIMGUI_SRC	= gui.c gui_beval.c MacVim/gui_macvim.m MacVim/MMBackend.m \
-		  MacVim/MacVim.m MacVim/MMLog.m MacVim/MMTypes.m MacVim/MMCocoaCategories.m
+		  MacVim/MacVim.m MacVim/MMLog.m MacVim/MMTypes.m MacVim/MMCocoaCategories.m \
+		  MacVim/MMUtils.m MacVim/MMUserDefaults.m
 MACVIMGUI_OBJ	= objects/gui.o objects/gui_beval.o objects/pty.o \
 		  objects/gui_macvim.o objects/MMBackend.o objects/MacVim.o \
-          objects/MMLog.o objects/MMTypes.o objects/MMCocoaCategories.o
+		  objects/MMLog.o objects/MMTypes.o objects/MMCocoaCategories.o \
+		  objects/MMUtils.o objects/MMUserDefaults.o
 MACVIMGUI_DEFS	= -DFEAT_GUI_MACVIM -Wall -Wno-unknown-pragmas -pipe
 MACVIMGUI_IPATH	=
 MACVIMGUI_LIBS_DIR =
@@ -2492,6 +2494,12 @@ objects/MMLog.o: MacVim/MMLog.m
 
 objects/MMTypes.o: MacVim/MMTypes.m
 	$(CCC) -o $@ MacVim/MMTypes.m
+
+objects/MMUtils.o: MacVim/MMUtils.m
+	$(CCC) -o $@ MacVim/MMUtils.m
+
+objects/MMUserDefaults.o: MacVim/MMUserDefaults.m
+	$(CCC) -o $@ MacVim/MMUserDefaults.m
 
 objects/MMCocoaCategories.o: MacVim/MMCocoaCategories.m
 	$(CCC) -fobjc-arc -o $@ MacVim/MMCocoaCategories.m
